Pausing HLS playback broken
HLS works fine on 2.0.8 but not on 2.1.0 or 2.2.0. Pausing the streams does not work.
Not sure which commit broke it.
HLS works fine on 2.0.8 but not on 2.1.0 or 2.2.0. Pausing the streams does not work.
Not sure which commit broke it.
assigned to @ileoo
changed milestone to %2.1.0 release
changed title from HLS playback broken to Pausing HLS playback broken
added Status::fixed label
closed
commit fc1655e1 Author: Rafaël Carré funman@videolan.org Date: Mon Aug 26 16:41:34 2013 +0200
HLS: implement pause
Close [#9234](https://code.videolan.org/videolan/vlc/-/issues/9234)
Original author: funman@videolan.org
VideoLAN code repository instance