HLS: implement pause

Close #9234